# somfy-dongle-rs

./: Cargo.toml  install.sh
somfy-rts/: Cargo.toml
somfy-rts-cli/: Cargo.toml
somfy-rts-cli/src/: main.rs
somfy-rts-mqtt/: Cargo.toml  somfy-rts-mqtt.service
somfy-rts-mqtt/src/: main.rs
somfy-rts/src/api/: mod.rs  model.rs  read.rs  ser.rs
