[package]
name = "somfy-rts-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
somfy-rts  = { path = "../somfy-rts" }
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
fern       = "0.6"
futures    = "0.3"
humantime  = "2"
log        = "0.4"
rumqttc    = "0.20"
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
