[package]
name = "somfy-rts"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes        = "1"
futures      = "0.3"
hex          = "0.4"
log          = "0.4"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
tokio        = { version = "1", features = ["io-util"] }
tokio-serial = "5.4"
# nix 0.27+ exige rustc 1.64+ — plafonné pour bloquer les résolutions via
# tokio-serial/mio-serial/serialport.
nix          = ">=0.24, <0.27"
